--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NativeModules</string>
+    <string name="login">Login</string>
+    <string name="signup">Signup</string>
 </resources>
